[package]
name = "game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
serde = { version = "1.0.188", features = ["derive"] }
thread_pool = { path = "../thread_pool" }
serde_json = "1.0.106"
game_state = { path = "../game_state" }
macroquad = "0.4.3"
