[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.75", features = ["backtrace"] }
thread_pool = { path = "../thread_pool" }
game_state = { path = "../game_state" }
macroquad = "0.4.4"
serde = { version = "1.0.188", features = ["serde_derive", "derive"] }
serde_json = "1.0.106"
